opa/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNotLatest
metadata:
  name: no-latest-tag
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
